Perkin-UAT/force-app/main/default/objects/Technical__c/Technical__c.object-meta.xml
<CustomObject>
    <description>New object to gather and structure technical information from Scientific Consultants or Custom Solution Team (Source: S-692579)</description>
    <label>Technical</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technicals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>