Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account Name Lookup (Source: S-692579)</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technicals</relationshipLabel>
    <relationshipName>Technicals</relationshipName>
    <type>Lookup</type>
</CustomField>