Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Assay_Format__c.field-meta.xml
<CustomField>
    <fullName>Assay_Format__c</fullName>
    <description>Assay Format (Source: S-692579)</description>
    <label>Assay Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biochemical</fullName>
            </value>
            <value>
                <fullName>Cell-based</fullName>
            </value>
            <value>
                <fullName>Tissue extracts/ endogenous material</fullName>
            </value>
            <value>
                <fullName>Other (inform your admin)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>