Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact Name Lookup (Source: S-692579)</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technicals</relationshipLabel>
    <relationshipName>Technicals</relationshipName>
    <type>Lookup</type>
</CustomField>