Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Date_for_Demo__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Demo__c</fullName>
    <description>Date for Hands on visit (Source: S-692579)</description>
    <label>Date for Hands-on Visit</label>
    <type>Date</type>
</CustomField>