Perkin-UAT/force-app/main/default/objects/Technical__c/fields/fxAccount_Owner__c.field-meta.xml
<CustomField>
    <fullName>fxAccount_Owner__c</fullName>
    <description>Owner First and Last name from Account (Source: S-692579)</description>
    <formula>Account_Name__r.Owner.FirstName &amp; &quot; &quot;&amp; Account_Name__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxAccount Owner</label>
    <type>Text</type>
</CustomField>