Perkin-UAT/force-app/main/default/objects/Technical__c/fields/fxStatus_Icon__c.field-meta.xml
<CustomField>
    <fullName>fxStatus_Icon__c</fullName>
    <description>Status Icon based on Status (Source: S-692579)</description>
    <formula>IMAGE(
CASE(Status__c, &quot;New&quot;, &quot;/resource/1651684638000/Qualification?isdtp=p1&quot;,
&quot;Submited to customer&quot;, &quot;/resource/1651684638000/Need_Analysis?isdtp=p1&quot;,
&quot;Completed&quot;, &quot;/resource/1651684638000/Approved?isdtp=p1&quot;,
&quot;&quot;)
,&quot;&quot;, 25,25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status icon</label>
    <type>Text</type>
</CustomField>