Perkin-UAT/force-app/main/default/objects/Technical__c/fields/fxTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxTerritory__c</fullName>
    <description>Getting PKI Territory value from Lead or Account (Source: S-692579)</description>
    <formula>IF(ISBLANK(Account_Name__c),(Lead_Name__r.fxPKITerritory__c),(Account_Name__r.fxPKITerritory__c))</formula>
    <label>fxTerritory</label>
    <type>Text</type>
</CustomField>