Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Name Lookup (Source: S-692579)</description>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Technicals</relationshipLabel>
    <relationshipName>Technicals</relationshipName>
    <type>Lookup</type>
</CustomField>