Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Legacy_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Project_Number__c</fullName>
    <description>used for legacy data loads(S-692784)</description>
    <inlineHelpText>used for legacy data loads</inlineHelpText>
    <label>Legacy Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>