Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Project_Associated_With_A_On_Site_Demo__c.field-meta.xml
<CustomField>
    <fullName>Project_Associated_With_A_On_Site_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project Associated with a hands-on Visit (Source: S-692579)</description>
    <inlineHelpText>Project Associated with a hands-on Visit</inlineHelpText>
    <label>Project associated with a hands-on visit</label>
    <type>Checkbox</type>
</CustomField>