Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Project_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Project_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the project was canceled by the customer (Source: S-692579)</description>
    <inlineHelpText>Check this box if the project was canceled by the customer</inlineHelpText>
    <label>Project Canceled</label>
    <type>Checkbox</type>
</CustomField>