Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Name of the Project (Source: S-692579)</description>
    <inlineHelpText>Name of the Project</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>