Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Readers__c.field-meta.xml
<CustomField>
    <fullName>Readers__c</fullName>
    <description>Readers (Source: S-692579)</description>
    <label>Readers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_220_Reader</valueSetName>
    </valueSet>
</CustomField>