Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Technical_Category__c.field-meta.xml
<CustomField>
    <fullName>Technical_Category__c</fullName>
    <description>Select one or more option here to better qualify your technical project (Source: S-692579)</description>
    <inlineHelpText>Select one or more option here to better qualify your technical project.</inlineHelpText>
    <label>Technical Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-site or virtual demo</fullName>
            </value>
            <value>
                <fullName>Assay Development</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Profiling</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>