Perkin-UAT/force-app/main/default/objects/Technical__c/fields/Technology_Readout__c.field-meta.xml
<CustomField>
    <fullName>Technology_Readout__c</fullName>
    <description>Technology Readout (Source: S-692579)</description>
    <label>Technology &amp; Readout</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALPHA</fullName>
            </value>
            <value>
                <fullName>DELFIA</fullName>
            </value>
            <value>
                <fullName>HTRF</fullName>
            </value>
            <value>
                <fullName>LANCE</fullName>
            </value>
            <value>
                <fullName>LITE</fullName>
            </value>
            <value>
                <fullName>Other (contact your admin)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>