Perkin-UAT/force-app/main/default/objects/Technical__c/listViews/PL_All_Technicals.listView-meta.xml
<ListView>
    <fullName>PL_All_Technicals</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Tech_Nom_Saisie__c</columns>
    <columns>fxStatus_Icon__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Category__c</columns>
    <columns>Technology_Readout__c</columns>
    <columns>Assay_Format__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Technicals</label>
</ListView>